Did some work. [8m0s]

--- a/source/contact.html
+++ b/source/contact.html
@@ -3,6 +3,7 @@ layout: page
 title: Contact Myles
 page_css_class: contact
 recaptcha: true
+javascript_libs: jquery_validate
 ---
 
 {% assign author = site.data.author %}
