Fixed up some stuff. [0]

--- a/source/_posts/article/2009-08-13-apple-products-destroyed.html
+++ b/source/_posts/article/2009-08-13-apple-products-destroyed.html
@@ -10,4 +10,4 @@ tags: [iphone, destruction, apple, g4, powermac]
 
 <h4>iPhone 3Gs Shot</h4>
 
-{% include c_responsive_video.html iframe_url='https://www.youtube-nocookie.com/embed/Db7pKjUrNXQ' %}
+{% include c_video.html iframe_url='https://www.youtube-nocookie.com/embed/Db7pKjUrNXQ' %}
