--- a/source/_posts/article/2011-03-08-new-starbucks-coffee-cup-design.html
+++ b/source/_posts/article/2011-03-08-new-starbucks-coffee-cup-design.html
@@ -10,7 +10,7 @@ tags: [design, coffee, starbucks]
 
 <p><a href="http://starbucks.com/">Starbucks</a> has changed the design of their coffee cups.</p>
 
-{% include c_responsive_image.html src='2011/067/new-starbucks-coffee-cup-design/new-stackbucks-cup-design.jpg' alt='New Starbucks Coffee Cup Design' %}
+{% include c_image.html src='2011/067/new-starbucks-coffee-cup-design/new-stackbucks-cup-design.jpg' alt='New Starbucks Coffee Cup Design' %}
 
 <ul>
     <li><a href="{{ site.upload_url }}/2011/067/new-starbucks-coffee-cup-design/new-starbucks-cup-design-front.jpg" alt="New Starbucks Coffee Cup Design Front">Front</a></li>
