--- a/source/_posts/article/2011-03-09-emacs-and-org-mode.html
+++ b/source/_posts/article/2011-03-09-emacs-and-org-mode.html
@@ -14,4 +14,4 @@ tags: [sacha-chua, org-mode, gtalug, emacs, meeting, talk]
 
 <p>It was also good to see that she, like me, use an Outliner for personal accounting.</p>
 
-{% include c_responsive_image.html src='2011/068/emacs-and-org-mode/omnioutliner-ledger.png' alt='Ledger in OmniOutliner' %}
+{% include c_image.html src='2011/068/emacs-and-org-mode/omnioutliner-ledger.png' alt='Ledger in OmniOutliner' %}
