--- a/source/_posts/article/2011-03-30-fleet-foxes.html
+++ b/source/_posts/article/2011-03-30-fleet-foxes.html
@@ -10,4 +10,4 @@ tags: [music, fleet-foxes]
 
 <p><strong><a href="http://www.fleetfoxes.com/">Fleet Foxes</a></strong> new album, <em>Helplessness Blues</em>, is coming out on the 3rd May, 2011.</p>
 
-{% include c_responsive_video.html iframe_url='http://player.vimeo.com/video/21577557' %}
+{% include c_video.html iframe_url='http://player.vimeo.com/video/21577557' %}
