--- a/source/_posts/article/2011-04-06-novell-vibe.html
+++ b/source/_posts/article/2011-04-06-novell-vibe.html
@@ -12,6 +12,6 @@ tags: [google-wave, collaboration, novell-vibe, novell]
 
 <p>But why make me have multiple accounts per email address, that means I have to have to have at least five different accounts.</p>
 
-{% include c_responsive_image.html src='2011/096/novell-vibe/novell-vibe-screenshot.png' alt='Novell Vibe' %}
+{% include c_image.html src='2011/096/novell-vibe/novell-vibe-screenshot.png' alt='Novell Vibe' %}
 
 <p>Anyways I hope to have a review of Vibe up in a few days (or weeks). If you would like to communicate with me on Vibe my username is <a href="https://vibe.novell.com/myles">myles</a>.</p>
