--- a/source/_posts/article/2011-04-25-what-the-frigga.html
+++ b/source/_posts/article/2011-04-25-what-the-frigga.html
@@ -8,6 +8,6 @@ tags: [django, frigga, contact-management, project]
 
 <p><strong>Frigga</strong> is basically a pretty wrapper around <a href="http://pypi.python.org/pypi/django-contacts">Django Contacts</a> so you could run it like a CRM or contact management system for people who aren't comfortable with the Django Administration application.</p>
 
-{% include c_responsive_image.html src='2011/115/what-the-frigga/frigga-screenshot.png' alt='Frigga' %}
+{% include c_image.html src='2011/115/what-the-frigga/frigga-screenshot.png' alt='Frigga' %}
 
 <p><strong>Update</strong>: Frigga is a character in <em>Journey into Mystery</em> (i.e. Thor).</p>
