--- a/source/_posts/article/2011-04-27-new-website-design.html
+++ b/source/_posts/article/2011-04-27-new-website-design.html
@@ -13,29 +13,29 @@ tags: [css, design, website, meta]
 
 <h2 id="default-layout">Default Layout</h2>
 
-{% include c_responsive_image.html src='2011/117/new-website-design/default-layout.png' alt='Less Framework 4 Default Layout' %}
+{% include c_image.html src='2011/117/new-website-design/default-layout.png' alt='Less Framework 4 Default Layout' %}
 
 
 <h2 id="tablet-layout">Tablet Layout</h2>
 
-{% include c_responsive_image.html src='2011/117/new-website-design/tablet-layout.png' alt='Less Framework 4 Tablet Layout' %}
+{% include c_image.html src='2011/117/new-website-design/tablet-layout.png' alt='Less Framework 4 Tablet Layout' %}
 
 <h3 id="ipad">iPad</h3>
 
-{% include c_responsive_image.html src='2011/117/new-website-design/tablet-layout-ipad.png' alt='Less Framework 4 Tablet Layout on an iPad' %}
+{% include c_image.html src='2011/117/new-website-design/tablet-layout-ipad.png' alt='Less Framework 4 Tablet Layout on an iPad' %}
 
 <h2 id="mobile-layout">Mobile Layout</h2>
 
-{% include c_responsive_image.html src='2011/117/new-website-design/mobile-layout.png' alt='Less Framework 4 Mobile Layout' %}
+{% include c_image.html src='2011/117/new-website-design/mobile-layout.png' alt='Less Framework 4 Mobile Layout' %}
 
 <h3 id="iphone">iPhone</h3>
 
-{% include c_responsive_image.html src='2011/117/new-website-design/mobile-layout-iphone.png' alt='Less Framework 4 Mobile Layout on an iPhone' %}
+{% include c_image.html src='2011/117/new-website-design/mobile-layout-iphone.png' alt='Less Framework 4 Mobile Layout on an iPhone' %}
 
 <h2 id="wide-mobile-layout">Wide Mobile Layout</h2>
 
-{% include c_responsive_image.html src='2011/117/new-website-design/wide-mobile-layout.png' alt='Less Framework 4 Wide Mobile Layout' %}
+{% include c_image.html src='2011/117/new-website-design/wide-mobile-layout.png' alt='Less Framework 4 Wide Mobile Layout' %}
 
 <h3 id="iphone_1">iPhone</h3>
 
-{% include c_responsive_image.html src='2011/117/new-website-design/wide-mobile-layout-iphone.png' alt='Less Framework 4 Wide Mobile Layout on an iPhone' %}
+{% include c_image.html src='2011/117/new-website-design/wide-mobile-layout-iphone.png' alt='Less Framework 4 Wide Mobile Layout on an iPhone' %}
