--- a/source/_posts/article/2013-09-11-doctor-who-50th-anniversary-poster.html
+++ b/source/_posts/article/2013-09-11-doctor-who-50th-anniversary-poster.html
@@ -8,4 +8,4 @@ tags: [doctor-who]
 
 <p>The 50th Anniversary episode of Doctor Who is coming out on the 23rd November, 2013.</p>
 
-{% include c_responsive_image.html src='2013/254/doctor-who-50th-anniversary-poster/doctor-who-50th.jpg' alt='Doctor Who 50th Anniversary Poster' %}
+{% include c_image.html src='2013/254/doctor-who-50th-anniversary-poster/doctor-who-50th.jpg' alt='Doctor Who 50th Anniversary Poster' %}
