--- a/source/_posts/article/2013-10-15-grand-budapest-hotel-film-wes-anderson.html
+++ b/source/_posts/article/2013-10-15-grand-budapest-hotel-film-wes-anderson.html
@@ -6,6 +6,6 @@ title: "The Grand Budapest Hotel a film by Wes Anderson"
 tags: [the-grand-budapest-hotel, film, wes-anderson, poster]
 ---
 
-{% include c_responsive_image.html src='2013/288/grand-budapest-hotel-film-wes-anderson/gbhtue.jpg' alt='The Grand Budapest Hotel' %}
+{% include c_image.html src='2013/288/grand-budapest-hotel-film-wes-anderson/gbhtue.jpg' alt='The Grand Budapest Hotel' %}
 
 <p><strong>Wes Anderson</strong> next film, <a href="http://www.grandbudapesthotel.com/">The Grand Budapest Hotel</a>, tailer is coming out on 17 October, 2013.</p>
