--- a/source/_posts/article/2013-11-06-daily-show-and-colbert-report-cover-rob-ford-crack.html
+++ b/source/_posts/article/2013-11-06-daily-show-and-colbert-report-cover-rob-ford-crack.html
@@ -6,6 +6,6 @@ title: "Daily Show and Colbert Report Cover the Rob Ford Crack Scandle"
 tags: [daily-show, colbert-report, rob-ford, toronto]
 ---
 
-{% include c_responsive_video.html iframe_url='https://www.youtube.com/embed/SCxrEfJyRfg' %}
+{% include c_video.html iframe_url='https://www.youtube.com/embed/SCxrEfJyRfg' %}
 
-{% include c_responsive_video.html iframe_url='https://www.youtube.com/embed/efomqKJuUfY' %}
+{% include c_video.html iframe_url='https://www.youtube.com/embed/efomqKJuUfY' %}
