--- a/source/_posts/article/2014-01-01-guardians-galaxy-film-still.html
+++ b/source/_posts/article/2014-01-01-guardians-galaxy-film-still.html
@@ -6,4 +6,4 @@ title: "Guardians of the Galaxy (film) Still"
 tags: [guardians-of-the-galaxy, film]
 ---
 
-{% include c_responsive_image.html src='2014/001/guardians-galaxy-film-still/guardians-of-the-galaxy.jpg' caption='Guardians of the Galaxy' %}
+{% include c_image.html src='2014/001/guardians-galaxy-film-still/guardians-of-the-galaxy.jpg' caption='Guardians of the Galaxy' %}
