--- a/source/_posts/bookmark/2014-09-02-the-nine-types-of-minecraft-players.html
+++ b/source/_posts/bookmark/2014-09-02-the-nine-types-of-minecraft-players.html
@@ -11,6 +11,6 @@ bookmark:
 
 <p>I'm a mix between the <em>Engineer</em> and <em>World Builder</em>.</p>
 
-{% include c_responsive_image.html src='2014/245/the-nine-types-of-minecraft-players/the-engineer_2.jpg' %}
+{% include c_image.html src='2014/245/the-nine-types-of-minecraft-players/the-engineer_2.jpg' %}
 
-{% include c_responsive_image.html src='2014/245/the-nine-types-of-minecraft-players/the-world-builder_2.jpg' %}
+{% include c_image.html src='2014/245/the-nine-types-of-minecraft-players/the-world-builder_2.jpg' %}
