--- a/source/_posts/bookmark/2015-12-03-wakeskating.html
+++ b/source/_posts/bookmark/2015-12-03-wakeskating.html
@@ -16,4 +16,4 @@ bookmark:
 <p>Brain Grubb wakesakting in one of the hot springs in <a href="https://en.wikipedia.org/wiki/Hierapolis">Hierapolis</a>.
 </p>
 
-{% include c_responsive_video.html iframe_url='https://www.youtube-nocookie.com/embed/NKc7v7hMJlE?rel=0' %}
+{% include c_video.html iframe_url='https://www.youtube-nocookie.com/embed/NKc7v7hMJlE?rel=0' %}
