--- a/source/_posts/article/2011-03-17-my-new-avatar.html
+++ b/source/_posts/article/2011-03-17-my-new-avatar.html
@@ -10,12 +10,12 @@ tags: [design, me, avatar]
 
 <p><del>Copied</del> Inspired by <a href="http://eightbit.me/">EightBit.me</a> I decided to update my avatar from a really shity picture of me to something more pixelated.</p>
 
-{% include c_responsive_image.html src='2011/076/my-new-avatar/hipster.png' alt="Myles Braithwaite's Hipster Outfit" %}
+{% include c_image.html src='2011/076/my-new-avatar/hipster.png' alt="Myles Braithwaite's Hipster Outfit" %}
 
-{% include c_responsive_image.html src='2011/076/my-new-avatar/suite-and-tie.png' alt="Myles Braithwaite's Work Outfit" %}
+{% include c_image.html src='2011/076/my-new-avatar/suite-and-tie.png' alt="Myles Braithwaite's Work Outfit" %}
 
-{% include c_responsive_image.html src='2011/076/my-new-avatar/formal.png' alt="Myles Braithwaite's Formal Outfit" %}
+{% include c_image.html src='2011/076/my-new-avatar/formal.png' alt="Myles Braithwaite's Formal Outfit" %}
 
-{% include c_responsive_image.html src='2011/076/my-new-avatar/underware.png' alt='Myles Braithwaite in his Underware' %}
+{% include c_image.html src='2011/076/my-new-avatar/underware.png' alt='Myles Braithwaite in his Underware' %}
 
 <p>I am currently working on making more fashion choices.</p>
