--- a/source/_posts/article/2013-09-03-hawkeye.html
+++ b/source/_posts/article/2013-09-03-hawkeye.html
@@ -8,4 +8,4 @@ tags: [hawkeye, marvel-comics, reading, comic-books]
 
 <p>Last week I had a chance to read the current <strong>Hawkeye</strong> written by <em>Matt Fraction</em>. It's pretty awesome.</p>
 
-{% include c_responsive_image.html src='2013/246/hawkeye/hawkeye_standing_outside_his_apartment_building_with_a_bow.jpg' alt='Hawkeye Standing Outside His Apartment Building With a Bow' %}
+{% include c_image.html src='2013/246/hawkeye/hawkeye_standing_outside_his_apartment_building_with_a_bow.jpg' alt='Hawkeye Standing Outside His Apartment Building With a Bow' %}
