Don't need dups.

--- a/source/_posts/bookmark/2013-08-31-dark-patterns-inside-the-interfaces-designed-to-trick-you.html
+++ b/source/_posts/bookmark/2013-08-31-dark-patterns-inside-the-interfaces-designed-to-trick-you.html
@@ -4,7 +4,7 @@ category: bookmark
 date: 2013-08-31 23:14:40
 title: "Dark Patterns: inside the interfaces designed to trick you"
 author: myles
-tags: [ui, user-experience, user-interfaces, ux, bad-design, dark-pattern]
+tags: [ui, ux, bad-design, dark-pattern]
 link:
   url: http://theverge.com/2013/8/29/4640308/dark-patterns-inside-the-interfaces-designed-to-trick-you
 ---
