--- a/source/_posts/bookmark/2011-04-12-avoid-the-pitfalls-of-the-javascript-trap-on-gmail.html
+++ b/source/_posts/bookmark/2011-04-12-avoid-the-pitfalls-of-the-javascript-trap-on-gmail.html
@@ -4,7 +4,7 @@ category: bookmark
 date: 2011-04-12 14:03:00
 title: "Avoid the pitfalls of the JavaScript Trap on Gmail"
 author: myles
-tags: [javascript, free-software-foundation]
+tags: [js, free-software-foundation]
 link:
   url: http://www.fsf.org/blogs/community/gmail-jstrap
 ---
