--- a/source/_posts/bookmark/2011-01-07-transferring-angry-birds-saved-game-data-to-your-mac.html
+++ b/source/_posts/bookmark/2011-01-07-transferring-angry-birds-saved-game-data-to-your-mac.html
@@ -4,7 +4,7 @@ category: bookmark
 date: 2011-01-07 11:07:00
 title: "Transferring Angry Birds saved game data to your Mac"
 author: myles
-tags: [iphone, ios, ipad, angry-birds, mac-os-x]
+tags: [iphone, ios, ipad, angry-birds, macos]
 link:
   url: http://www.macworld.com/article/156802/2011/01/angry_birds_saved.html
 ---
