--- a/source/_posts/bookmark/2011-01-20-using-amazon-ec2-as-your-desktop.html
+++ b/source/_posts/bookmark/2011-01-20-using-amazon-ec2-as-your-desktop.html
@@ -4,7 +4,7 @@ category: bookmark
 date: 2011-01-20 15:03:00
 title: "Using Amazon EC2 as Your Desktop"
 author: myles
-tags: [desktop, amazon-ec2, remote-desktop]
+tags: [desktop, ec2, remote-desktop]
 link:
   url: http://blog.restbackup.com/how-to-use-amazon-ec2-as-your-desktop
 ---
