--- a/source/_posts/bookmark/2011-03-23-new-york-times-pay-wall-bypassed-with-noscript.html
+++ b/source/_posts/bookmark/2011-03-23-new-york-times-pay-wall-bypassed-with-noscript.html
@@ -4,7 +4,7 @@ category: bookmark
 date: 2011-03-23 11:03:00
 title: "New York Time's Pay Wall Bypassed with NoScript"
 author: myles
-tags: [javascript, noscript, new-york-times, pay-wall]
+tags: [js, noscript, new-york-times, pay-wall]
 link:
   url: http://tomlowshang.blogspot.com/2011/03/pay-wall-without-walls.html
 ---
