--- a/source/_posts/bookmark/2011-06-13-icloud-will-make-native-applications-better.html
+++ b/source/_posts/bookmark/2011-06-13-icloud-will-make-native-applications-better.html
@@ -4,7 +4,7 @@ category: bookmark
 date: 2011-06-13 11:24:00
 title: "iCloud Will Make Native Applications Better"
 author: myles
-tags: [mac-os-x, apple, ios, icloud]
+tags: [macos, apple, ios, icloud]
 link:
   url: http://diogenex.tumblr.com/post/6269534484/thoughts-on-a-keynote
 ---
