--- a/source/tags.html
+++ b/source/tags.html
@@ -9,12 +9,12 @@ permalink: /tag/
 {% assign tag_words = site_tags | split:',' | sort %}
 
 <div class="archive archive--tag-cloud">
-    <div class="archive__header">
+    <div class="page__header archive__header">
         <h1 class="archive__title">Tags</h1>
     </div>
 
-    <div class="archive__group">
-    <ul class="tag-cloud">
+    <div class="page__content archive__group">
+        <ul class="tag-cloud">
         {% assign tag_list = site.tags %}
         {% for tag_info in tag_list %}
             {% assign tag_id = tag_info | first %}
