--- a/source/_posts/bookmark/2011-01-07-what-to-do-when-your-servers-get-hacked.html
+++ b/source/_posts/bookmark/2011-01-07-what-to-do-when-your-servers-get-hacked.html
@@ -4,7 +4,7 @@ category: bookmark
 date: 2011-01-07 13:39:00
 title: "What to Do when Your Servers Get Hacked"
 author: myles
-tags: [system-administration, security, hacked]
+tags: [sysadmin, security, hacked]
 link:
   url: http://serverfault.com/questions/218005/my-servers-been-hacked-emergency/218011#218011
 ---
