--- a/source/tags.html
+++ b/source/tags.html
@@ -3,6 +3,7 @@ layout: archive
 title: Tags
 permalink: /tag/
 javascript_libs: listjs
+skip_index: true
 ---
 
 {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
