Did a bunch of work. [0]

--- a/source/_posts/article/2009-11-15-spam.html
+++ b/source/_posts/article/2009-11-15-spam.html
@@ -6,12 +6,9 @@ title: "A Spam Email Message I Got Today"
 tags: [funny, spam, email]
 ---
 
-<!-- TODO: Fix the `blockquote` in this post. -->
-<!-- TODO: The `blockquote` should have the css selector font-family-monospace. -->
-
 <p>This is some spam I received today.</p>
 
-<blockquote class="blockquote blockquote--email">
+<blockquote class="blockquote blockquote--email font-family-monospace">
     <p>
         <strong>To</strong>: me@mylesbraithwaite.com<br>
         <strong>Subject</strong>: Private Invitation<br>
