Fixed the format of some older posts. [0]

--- a/source/_posts/bookmark/2011-01-12-han-solo-in-carbonite-in-firefly.html
+++ b/source/_posts/bookmark/2011-01-12-han-solo-in-carbonite-in-firefly.html
@@ -7,13 +7,11 @@ author: myles
 tags: [star-wars, firefly, han-solo, serenity, carbonite]
 bookmark:
   url: http://geekfemme.blogspot.com/2011/01/han-solos-in-firefly.html
+feature-image: 2011/012/han-solo-in-carbonite-in-firefly/heart-of-gold-firefly.jpg
 ---
 
-<blockquote>
-<p>As it turns out, a Han Solo in Carbonite was brought on set since Nathan Fillion is such a huge Star Wars fan.  The props team joked around and added it to sets whenever they could, it apparently became a running joke.  It didn't get grabbed out of every scene before shooting though. </p>
+<blockquote class="blockquote">
+    <p>As it turns out, a Han Solo in Carbonite was brought on set since Nathan Fillion is such a huge Star Wars fan.  The props team joked around and added it to sets whenever they could, it apparently became a running joke.  It didn't get grabbed out of every scene before shooting though. </p>
 </blockquote>
-<div class="inline illustration">
-    <a href="http://cdn.mylesbraithwaite.com/media/uploads/posts/2011-01-12-han-solo-in-carbonite-in-firefly/heart-of-gold-firefly-large.jpg" title="Heart of Gold - Firefly">
-        <img src="http://cdn.mylesbraithwaite.com/media/uploads/posts/2011-01-12-han-solo-in-carbonite-in-firefly/heart-of-gold-firefly-small.jpg" alt="Heart of Gold - Firefly">
-    </a>
-</div>
+
+{% include c_image.html src='2011/012/han-solo-in-carbonite-in-firefly/heart-of-gold-firefly.jpg' title='Heart of Gold' alt='Heart of Gold' %}
