--- a/source/_posts/bookmark/2011-01-19-horoscoped.html
+++ b/source/_posts/bookmark/2011-01-19-horoscoped.html
@@ -7,11 +7,9 @@ author: myles
 tags: [horoscope, analysis]
 bookmark:
   url: http://www.informationisbeautiful.net/2011/horoscoped/
+feature-image: 2011/019/horoscoped/horoscoped.jpg
 ---
 
 <p><a href="http://www.informationisbeautiful.net/">Information is Beautiful</a> scraped and analysed 22,000 horoscopes to see if they really all same the same thing.</p>
-<div class="inline illustration">
-    <a href="http://cdn.mylesbraithwaite.com/media/uploads/posts/2011-01-19-horoscoped/large.jpg" title="Horoscoped - Most common words in star sign predictions.">
-        <img src="http://cdn.mylesbraithwaite.com/media/uploads/posts/2011-01-19-horoscoped/medium.jpg" alt="Horoscoped - Most common words in star sign predictions.">
-    </a>
-</div>
+
+{% include c_image.html src='2011/019/horoscoped/horoscoped.jpg' alt='Horoscoped - Most common words in star sign predictions' title='Horoscoped - Most common words in star sign predictions' %}
