--- a/source/_posts/bookmark/2011-06-10-xkcd-permanence.html
+++ b/source/_posts/bookmark/2011-06-10-xkcd-permanence.html
@@ -7,11 +7,9 @@ author: myles
 tags: [linux, xkcd, web-comic]
 bookmark:
   url: http://xkcd.com/910/
+feature-image: 2011/161/xkcd-permanence/permanence.png
 ---
 
 <p>I think anyone that uses Linux has the same conundrum when setting up a new server. Unless you one of those people who uses web1, db1, app1...</p>
-<div class="illustration inline">
-    <a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/120/permanence.png" title="xkcd - Permanence">
-    <img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/120/permanence.png" alt="xkcd - Permanence">
-    </a>
-</div>
+
+{% include c_image.html src='2011/161/xkcd-permanence/permanence.png' %}
