--- a/source/_posts/bookmark/2014-06-06-email-self-defense.html
+++ b/source/_posts/bookmark/2014-06-06-email-self-defense.html
@@ -7,8 +7,10 @@ author: myles
 tags: [email, gnupg]
 bookmark:
   url: https://emailselfdefense.fsf.org/index.html
+feature-image: 2014/157/email-self-defense/gnupg-infographic.png
 ---
 
 <p>The <a href="https://fsf.org/">Free Software Foundation</a>'s guide to fighting
 surveillance with GnuPG.</p>
-<p><img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/309/gnupg-infographic.png" alt="Email Self-Defense Infographic" class="img-thumbnail"></p>
+
+{% include c_image.html src='2014/157/email-self-defense/gnupg-infographic.png' alt='Email Self-Defense Ingographic' %}
