--- a/source/_posts/bookmark/2011-01-04-rover-will-spend-7th-birthday-at-stadium-size-crater.html
+++ b/source/_posts/bookmark/2011-01-04-rover-will-spend-7th-birthday-at-stadium-size-crater.html
@@ -7,12 +7,13 @@ author: myles
 tags: [space, mars, opportunity-rover, mars-exploration-rover]
 bookmark:
   url: http://www.nasa.gov/mission_pages/MRO/news/mro20110104.html
+feature-image: 2011/004/rover-will-spend-7th-birthday-at-stadium-size-crater/santa-maria-crater.jpg
 ---
 
 <p>The <a href="http://en.wikipedia.org/wiki/Opportunity_rover" title="Wikipedia article about the Opportunity Rover">Opportunity</a>, the little rover that could is exploring the Santa Maria crater (a football-field-size crater on the planet Mars).</p>
-<blockquote>
-<p>Opportunity and its twin, Spirit, which passed its seventh anniversary on Mars this week, both have made important discoveries about wet environments on ancient Mars that may have been favourable for supporting microbial life.</p>
+
+<blockquote class="blockquote">
+    <p>Opportunity and its twin, Spirit, which passed its seventh anniversary on Mars this week, both have made important discoveries about wet environments on ancient Mars that may have been favourable for supporting microbial life.</p>
 </blockquote>
-<div class="inline illustration">
-    <a href="http://cdn.mylesbraithwaite.com/media/uploads/posts/2011-01-04-rover-will-spend-7th-birthday-at-stadium-size-crater/santa-maria-crater.jpg" title="Mars Orbiter Sees Rover Opportunity at Crater Edge"><img src="http://cdn.mylesbraithwaite.com/media/uploads/posts/2011-01-04-rover-will-spend-7th-birthday-at-stadium-size-crater/santa-maria-crater-small.jpg" alt="Mars Orbiter Sees Rover Opportunity at Crater Edge"></a>
-</div>
+
+{% include c_image.html src='2011/004/rover-will-spend-7th-birthday-at-stadium-size-crater/santa-maria-crater.jpg' alt='Mars Orbiter Sees Rover Opportunity at Crater Edge' title='Mars Orbiter Sees Rover Opportunity at Crater Edge' %}
