Did some stuff.

--- a/source/_posts/bookmark/2014-08-06-monkeys-selfie-at-centre-of-copyright-brouhaha.html
+++ b/source/_posts/bookmark/2014-08-06-monkeys-selfie-at-centre-of-copyright-brouhaha.html
@@ -24,5 +24,5 @@ bookmark:
 <blockquote class="blockquote">
     <p>The Office will not register works produced by nature, animals, or plants. Likewise, the Office cannot register a work purportedly created by divine or supernatural beings, although the Office may register a work where the application or the deposit copy state that the work was inspired by a divine spirit</p>
 
-    <p class="blockquote__footer"><cite>Compendium of US Copyright Office Practices, Third Edition<cite> (<a href="{{ upload_url }}/2014/218/monkeys-selfie-at-centre-of-copyright-brouhaha/compendium-full.pdf">PDF Copy of the Report</a>).</p>
+    <p class="blockquote__footer"><cite>Compendium of US Copyright Office Practices, Third Edition<cite> (<a href="{{ site.upload_url }}/2014/218/monkeys-selfie-at-centre-of-copyright-brouhaha/compendium-full.pdf">PDF Copy of the Report</a>).</p>
 </blockquote>
