--- a/source/_posts/list/2016-12-31-favorite-albums.html
+++ b/source/_posts/list/2016-12-31-favorite-albums.html
@@ -7,66 +7,20 @@ albums:
   - name: Morning Report
     artist: Arkells
     spotify_id: album/2WJ3wW5Uy58NOWkIzzK4a4
-    itunes_link: https://itunes.apple.com/ca/album/morning-report/id1109533861
     artwork: 2016/366/favorite-albums/arkells-morning-report.jpg
     favorite_track:
       name: Private School
       youtube_id: E7V30rKiikA
       spotify_id: track/3LsvNEwFMCDf4nXsYEHmex
-    lyrics: |
-        [Verse 1]
-        Private school girls, private school boys:
-        Playing games, expensive toys
-        Private school girls, private school boys:
-        Don DeLillo wrote White Noise
-        I tried so hard to find an in but you weren't giving me anything
-        Come on now throw me a line...it's a sign
 
-        [Chorus]
-        Ah, fuck off: don't say I'd do the same
-        Getting off without an ounce of shame
-        And you know, I just want to love you...but it's so hard
-        Just want to love you...but it's so hard
-
-        [Verse 2]
-        Private school boys, private school girls:
-        The nicest skin, the nicest curls
-        Private boys boys, private school girls:
-        Gimme a chance, gimme a whirl
-        You walked in, my jaw hit the floor
-        You act like this is such a chore
-        Around you i feel like swine:
-        You're divine
-
-        [Chorus]
-        Ah, fuck off: don't say I'd do the same
-        Getting off without an ounce of shame
-        And you know, I just want to love you...but it's so hard
-        Just want to love you...but it's so hard
-
-        [Bridge]
-        I want to go to the party!
-        I want to drink the bacardi!
-        Who's bringing the molly?
-        Let's get a bit naughty...
-
-        I want to go to the party!
-        I want to drink the bacardi!
-        Who's bringing the molly?
-        Who's gonna stop me...
-
-        [Chorus]
-        Ah, fuck off: don't say I'd do the same
-        Getting off without an ounce of shame
-        And you know, I just want to love you...but it's so hard
-        Just want to love you...but it's so hard
-
-        [Outro]
-        Private school kids, life is so simple
-        Born on third base, thought they hit a triple
-
-  - name: All My Demons Greeting Me as aFriend
+  - name: All My Demons Greeting Me as a Friend
     artist: AURORA
+    artwork: 2016/366/favorite-albums/aurora-all-my-demons-greeting-me-as-a-friend.jpg
+    spotify_id: album/7ElzXR2E3kekE4wX1zDZq2
+    favorite_track:
+      name: Conqueror
+      youtube_id: dmVAmlpbnD4
+      spotify_id: track/5nqof30JRAkvfxcj9cgS0n
 
   - name: Wildflower
     artist: The Avalanches
@@ -131,24 +85,26 @@ albums:
 
 <p>2016 was a great year for music here is a list of my favorite albums of 2016.</p>
 
-<div class="l-grid">
-    {% for album in page.albums %}
-    {% if album.artwork %}
-    <div class="l-row">
-        <div class="l-column l-column--4">
-            {% include c_image.html src=album.artwork %}
-        </div>
+<div class="l-grid" itemscope itemtype="http://schema.org/MusicPlaylist">
+  <meta content="{{ page.title }}" property="name">
 
-        <div class="l-column l-column--8">
-            <h3>{{ album.name | improve }} / <strong>{{ album.artist | improve }}</strong></h3>
-
-            <ul>
-                <li>Favorite Track: {{ album.favorite_track.name }}</li>
-                <li>Stream: </li>
-                <li>Buy: </li>
-            </ul>
-        </div>
+  {% for album in page.albums %}
+  {% if album.artwork %}
+  <div class="l-row" itemprop="track" itemscope itemtype="http://schema.org/MusicRecording">
+    <div class="l-column l-column--6">
+      {% include c_image.html src=album.artwork %}
     </div>
-    {% endif %}
-    {% endfor %}
+
+    <div class="l-column l-column--6">
+      <h3><span itemprop="inAlbum">{{ album.name | improve }}</span> / <strong itemprop="byArtist">{{ album.artist | improve }}</strong></h3>
+
+      <meta content="{{ album.favorite_track.name }}" property="name">
+
+      {% capture youtube_iframe_url %}https://www.youtube-nocookie.com/embed/{{ album.favorite_track.youtube_id }}{% endcapture %}
+
+      {% include c_video.html iframe_url=youtube_iframe_url %}
+    </div>
+  </div>
+  {% endif %}
+  {% endfor %}
 </div>
