:art: Fixed up another post formating.

--- a/source/_posts/bookmark/2011-12-16-ringtones-make-up-13-of-the-online-music-industry.html
+++ b/source/_posts/bookmark/2011-12-16-ringtones-make-up-13-of-the-online-music-industry.html
@@ -10,16 +10,16 @@ bookmark:
 ---
 
 <p><a href="http://mashable.com/">Mashable</a> has an interesting info-graphic about ringtones. This little tidbit surprised me:</p>
-<div class="illustration inline">
-    <a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/196/ringtones-infographic.jpeg" title="Ringtones Infographic">
-    <img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/196/ringtones-infographic.jpeg" geometry="500" alt="Ringtones Infographic">
-    </a>
-</div>
 
-<blockquote>
-<p>And over there there's broken bones<br/>
-There's only music, so that there's new ring tones<br/>
-And it don't take no Sherlock Holmes<br/>
-To see it's a little different around here</p>
+{% include c_image.html src='2011/350/ringtones-make-up-13-of-the-online-music-industry/ringtones-infographic.jpg' %}
+
+<blockquote class="blockquote blockquote--lyrics">
+    <p>
+        And over there there's broken bones<br/>
+        There's only music, so that there's new ring tones<br/>
+        And it don't take no Sherlock Holmes<br/>
+        To see it's a little different around here
+   </p>
+
+    <p class="blockquote__footer"><strong>Arctic Monkeys</strong> / A Certain Romance</p>
 </blockquote>
-<p>~ <strong>Arctic Monkeys</strong> / A Certain Romance</p>
